--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-google-signin": "^2.1.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
