--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "babel-preset-react-native": "2.1.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -23,10 +25,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "@types/react-native-vector-icons": "^6.4.12",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
