--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "babel-preset-react-native": "2.1.0",
@@ -32,7 +33,7 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "@types/react-native-vector-icons": "^6.4.12",
-    "typescript": "^4.9.0-dev.20221007"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
