--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react-native": "2.1.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "9.6.11",
     "react": "18.0.0",
