--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "babel-preset-react-native": "2.1.0",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-google-app-auth": "~8.3.0",
+    "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "9.6.11",
     "react": "18.0.0",
