--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-google-signin": "^2.1.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
