--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "babel-preset-react-native": "2.1.0",
-    "expo": "~46.0.9",
+    "expo": "^46.0.16",
     "expo-font": "~10.2.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-image-picker": "^13.3.1",
